--- a/shoppy/front/src/App.css
+++ b/shoppy/front/src/App.css
@@ -34,7 +34,7 @@ header {
   display:flex;
   align-items: center;
   justify-content: space-around;
-  width: 25%;
+  width: 40%;
   font-weight: 600;
 }
 .gnb a {
@@ -48,6 +48,7 @@ header {
   border:none;
   font-weight: bold;
   height: 100%;
+  cursor: pointer;
 }
 
 
@@ -220,4 +221,9 @@ header {
   display:flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+}
+
+
+.welcome {
+  margin-right: 20px;
 }
