--- a/shoppy/front/src/App.css
+++ b/shoppy/front/src/App.css
@@ -257,3 +257,23 @@ header {
   width:100%;
   overflow:hidden;
 }
+
+.tot_div_style {
+  text-align: center;
+  border:1px solid #000;
+  padding: 10px 20px;
+}
+.tot_font_style {
+  font-weight: bold;
+  margin: 0 10px;
+}
+.tot_order_font_style {
+  color:red;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.orderBtn {
+  text-align: center;
+  margin-top: 20px;
+}
